# Memory-Trainer

./: DEMO.html  index.html  memory.html
tauri/: BUILD_INSTRUCTIONS.md  BUILD_INSTRUCTIONS_CROSS_PLATFORM.md  BUILD_STATUS.md  CHECKLIST.md  CROSS_PLATFORM_SUMMARY.md  DIRECTORY_STRUCTURE.md  PLATFORM_SETUP.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  START_HERE.md  TODO.md  package.json  quick-build.bat  quick-build.sh  quick-dev.bat  quick-dev.sh
tauri/scripts/: platform-utils.js
tauri/src/: help.html  index.html
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
